# zapdos

./: .gitignore  .profile.centos7  .profile.mac  .profile.ubuntu  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  ENDPOINTS.txt  LICENSE  README.COMPILE.md  README.CONFIG.md  README.DOCKER.md  README.LINUX.md  README.REPLICATION.md  README.RULES.md  README.md  a
cmake_modules/: FindCITYHASH.cmake  FindCRYPTOPP.cmake  FindCTEMPLATE.cmake  FindGFLAGS.cmake  FindGUMBO.cmake  FindMYSQL.cmake  FindPQXX.cmake  FindSodium.cmake  FindXAPIAN.cmake
doc/: BULKDATA.md  CATEGORYTAG.md  COMPILE.md  COMPLETION.md  CONFIG.md  MOTIVATION.md  SPELLCHECKER.md  USERDATA.md
docker/: Dockerfile  README.md  run_as_master.sh  run_as_slave.sh  zapdos.conf
docker/nominatim/: Dockerfile  README.md  init.sh  local.php  run.sh
docker/zapdos/: 01_prep_data.sh  Dockerfile  Dockerfile.env  Dockerfile.run  README.md  build_env.sh  run.sh  run_as_master.sh  run_as_slave.sh  sync.sh  zapdos.conf
docs/: BULKDATA.md  COMPILE.md  ITEMDATA.md  README.md  REPLICATION.md  USERDATA.md  classes.html  dir_000008_000005.html  dir_000008_000010.html  dir_000008_000018.html  dir_000010_000007.html  dir_000010_000008.html  dir_000013_000017.html  dir_000013_000021.html  dir_000014_000002.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_1563a38af0d3a5e4a6330d6d45e9792a_dep.md5  dir_2d29d7dff7c7baf1180920f6796c23ae.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_32fb88e4d38e67d524aa70efbc36f66b.html  dir_41c3017ffa9588d01380bd24bf132c9b.html  dir_488282ccff5b8c23f8bdfabc1c72d56b.html  dir_594d679445c51b543a2c3aa60004494d.html  dir_594d679445c51b543a2c3aa60004494d_dep.map  dir_594d679445c51b543a2c3aa60004494d_dep.md5  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_5eb159725f84c66aafd839904a4acdd0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_c0632c2c4769486d54d1bae76e6a432e.html  dir_cc12abc95cb54c18d5c8d7ca0d3d5af5.html  dir_cc12abc95cb54c18d5c8d7ca0d3d5af5_dep.md5  dir_d15543548802ab90ca6fe47679dc4b3e.html  dir_d1cd9ec4aceda7c95719106438dc6860.html  dir_e56f1e252aba1391cbed9ce960e0356a.html  dir_e56f1e252aba1391cbed9ce960e0356a_dep.md5  dir_fe2e0cb949cafcffa084908b3ca2f11a.html  (+381 more)
docs/html/: annotated.html  dir_000001_000002.html  (+489 more)
etc/: .gitignore  shreos_mac.conf  shreos_mac2.conf  zapdos.conf  zapdos.conf.sample
include/cpr/: api.h
proto/: CMakeLists.txt  Hrpc.proto  Query.proto  Search.proto  Store.proto
scripts/: cmake_debug.sh  header.sh  maketable.sh  thirdparty.sh  zapdos.service
src/: CMakeLists.txt
src/async++/: CMakeLists.txt  scheduler.cpp
src/cpr/: CMakeLists.txt
src/crypto/: AES128CBC.cc  Anchor.hpp  CMakeLists.txt  CryptoBase.cc
src/hrpc/: CMakeLists.txt  HrpcClient.cc  RemoteKeeper.cc  SyncServer.cc  SyncServer.hpp  SyncServiceList.hpp
src/http/: CMakeLists.txt  WebServer.cc  WebServer.hpp
src/jamspell/: BloomFilter.cc  CMakeLists.txt  JamUtils.cc  LangModel.cc  PerfectHash.cc  SpellCorrector.cc  StoreJam.cc  city.cc  phf.cc
src/main/: CMakeLists.txt  DefaultServer.cc  DefaultServer.hh  WorkServer.cc  WorkServer.hpp
src/query/: CMakeLists.txt  HttpClient.cc  ProtoForm.cc  ProtoJson.cc
src/remote/: CMakeLists.txt  GeoHashHelper.cc  KrovetzStemmer.cc
src/search/: BaseUtils.cc  CMakeLists.txt  DistanceSlabKeyMaker.cc  GeoHashHelper.cc  IndexBase.cc  IndexLocal.cc  IndexWiki.cc  KrovetzStemmer.cc  ReadIndex.cc  SearchBase.cc  SearchCache.cc  SearchLocal.cc  SearchTrie.cc  SearchWiki.cc  StoreTrie.cc  TrieBase.cc  WriteIndex.cc
src/store/: CMakeLists.txt  CacheContainer.cc  CategoryService.cc  CategoryTable.cc  CredServiceBase.cc  ExterCredService.cc  ExterDataService.cc  ExterDataTable.cc  ExtraAttribService.cc  ExtraAttribTable.cc  HandleGeneric.cc  HandleSession.cc  HandleStringData.cc  HandleTagData.cc  ItemDataService.cc  LocalDataService.cc  LocalDataTable.cc  LookupRecordService.cc  LookupRecordTable.cc  PhotonService.cc  ProfileService.cc  ProfileTable.cc  SimpleTemplateTable.cc  StoreBase.cc  StoreLevel.cc  StoreTrans.cc  TagDataService.cc  TagDataTable.cc  TempNameCache.cc  TextDataService.cc  TextRecordService.cc  TextRecordTable.cc  UserCredService.cc  UserDataService.cc  UserDataTable.cc  WikiDataService.cc  WikiDataTable.cc
src/tools/: AddCsvData.cc  AddData.cc  AddLocalData.cc  AddTextData.cc  CMakeLists.txt  CountryCodes.hpp  DataField.hpp  DumpDb.cc  ExtractWiki.cc  LineReader.cc  LineReader.hpp  NominaCsv.cc  README.md  TestSpell.cc  XapIndex.cc
src/utils/: B64String.cc  CMakeLists.txt  CfgFileOptions.cc  S64String.cc  SplitWith.cc
templates/: help.tpl  index.html.tpl  page.css.tpl  pano.css.tpl  pano.js.tpl
test/: config.sh  default_setsimpletemplate.sh  export_admin_login.sh  export_user_login.sh  my_setsimpletemplate.sh  test_admin_category_create.sh  test_admin_category_delete.sh  test_admin_category_getmany.sh  test_admin_category_getone.sh  test_admin_category_update.sh  test_admin_category_upsert.sh  test_admin_exterdata_add_profiles.sh  test_admin_exterdata_add_tags.sh  test_admin_exterdata_create.sh  test_admin_exterdata_delete.sh  test_admin_exterdata_getmany.sh  test_admin_exterdata_getone.sh  test_admin_exterdata_update.sh  test_admin_exterdata_update_description.sh  test_admin_exterdata_update_email.sh  test_admin_exterdata_update_given_name.sh  test_admin_exterdata_update_mobile.sh  test_admin_exterdata_update_passkey.sh  test_admin_exterdata_upsert.sh  test_admin_localdata_create.sh  test_admin_localdata_delete.sh  test_admin_localdata_getmany.sh  test_admin_localdata_getone.sh  test_admin_localdata_merge.sh  test_admin_localdata_update.sh  test_admin_localdata_upsert.sh  test_admin_login.sh  test_admin_login_resetpass.sh  test_admin_tagdata_create.sh  test_admin_tagdata_delete.sh  test_admin_tagdata_getmany.sh  test_admin_tagdata_getone.sh  test_admin_tagdata_update.sh  test_admin_tagdata_upsert.sh  test_admin_userdata_add_categories.sh  (+60 more)
(+403 files in other folders)
